@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T08:30:49Z",
+  "timestamp" : "2022-04-28T16:37:00Z",
   "count_outdated" : 16,
   "uniques_outdated" : 2,
-  "count" : 19,
-  "uniques" : 4,
+  "count" : 22,
+  "uniques" : 5,
   "views" : [
     {
       "timestamp": "2022-04-18T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-28T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
