@@ -1,6 +1,6 @@
 {
-  "count": 3,
-  "uniques": 1,
+  "count": 6,
+  "uniques": 2,
   "views": [
     {
       "timestamp": "2022-04-18T00:00:00Z",
@@ -10,6 +10,11 @@
     {
       "timestamp": "2022-04-20T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-28T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
