@@ -1,3 +1,9 @@
+2022-04-28T16:37:00Z:
+* notice: last 14d: all unq: 6 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 16 2 / 19 4
+* notice: next accum: outdated-all outdated-unq / all unq: 16 2 / 22 5
+* notice: prev json diff // prev day diff: unq all: +1 +3 / -0 -0 // +1 +3 / -0 -0
+
 2022-04-20T08:30:49Z:
 * notice: last 14d: all unq: 3 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 16 2 / 17 3
